--- a/prac/src/pages/lesson/courseadd.scss
+++ b/prac/src/pages/lesson/courseadd.scss
@@ -1,10 +1,10 @@
 .courseAdd{
-  margin: 5vh 0;
+  margin: 1vh 0 5vh 0;
   .addChapterArea{
     width: 40vw;
     border: 2px solid rgb(236, 236, 236);
     border-radius: 5px;
-    margin: 20px 0;
+    margin-bottom: 20px ;
     padding: 10px 15px;
   }
   .chapterArea{
@@ -14,7 +14,7 @@
     padding: 10px 15px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    // gap: 10px;
     width: 40vw;
     .chapterTitle{
       font-size: large;
@@ -43,19 +43,28 @@
       gap: 10px;
       .subChapterTitle{
         display: flex;
-        .titleRename{
-          padding: 0 10px;
-          border: none;
-          background-color: transparent;
-          cursor: pointer;
-          margin-left: auto;
+        flex-direction: column;
+        gap: 10px;
+        div{
+          display: flex;
+          span{
+            margin-right: auto;
+            font-size: 16px;
+          }
+          .titleRename{
+            padding: 0 10px;
+            border: none;
+            background-color: transparent;
+            cursor: pointer;
+          }
+          .titleCancel{
+            padding: 0 10px;
+            border: none;
+            background-color: transparent;
+            cursor: pointer;
+          }
         }
-        .titleCancel{
-          padding: 0 10px;
-          border: none;
-          background-color: transparent;
-          cursor: pointer;
-        }
+        
       }
     }
     .addSupChapterArea{
@@ -68,4 +77,11 @@
     
   }
 
+}
+.courseText{
+  width: 40vw;
+  height: 20vh;
+  margin-bottom: 20px;
+  font-size: large;
+  padding:3px;
 }
